refactored navbar code and fixed logo alignment

--- a/src/assets/css/Gallery.module.css
+++ b/src/assets/css/Gallery.module.css
@@ -2,9 +2,8 @@
 
 .photo_body {
     max-width: 120rem;
-    /*width: min(80%, 1200px);*/
     margin-inline: auto;
-    padding-top: 5%;
+    padding-top: 1.6rem;
 }
 
 .photo_container {
